fix input on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -18,9 +18,10 @@ body {
 .mainInput {
   margin: auto;
   max-width: 60ch;
+  width: calc(100% - 2rem);
 }
 .mainInput textarea {
-  width: 100%;
+  width: calc(100% - 2rem);
   resize: vertical;
   font-family: inherit;
   padding: 0.5rem 1rem;
